--- a/Initial Assessment of Data Files.ipynb
+++ b/Initial Assessment of Data Files.ipynb
@@ -9,28 +9,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.width', None)\n",
+    "pd.set_option('display.max_colwidth', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_files_folder = \"../2020001_Update/OriginalData\"\n",
+    "data_files_folder = r\"..\\20210111_Budget_Update\\OfficialData\"\n",
     "\n",
     "assert os.path.exists(data_files_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,177 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tFY 2020 AND FY 2021 POST SESSION FOR OPEN DATA PORTAL - EXP DATA.XLSX\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 128327 entries, 0 to 128326\n",
-      "Data columns (total 18 columns):\n",
-      "Fiscal Year                          128327 non-null object\n",
-      "Agency Code                          128327 non-null object\n",
-      "Agency Name                          128327 non-null object\n",
-      "Unit Code                            128327 non-null object\n",
-      "Unit Name                            128327 non-null object\n",
-      "Program Code                         128327 non-null int64\n",
-      "Program Name                         128327 non-null object\n",
-      "Subprogram Code                      128327 non-null object\n",
-      "Subprogram Name                      128327 non-null object\n",
-      "Object Code                          128327 non-null int64\n",
-      "Object Name                          128327 non-null object\n",
-      "Comptroller Subobject Code           128327 non-null int64\n",
-      "Comptroller Subobject Name           128327 non-null object\n",
-      "Agency Subobject Code                128327 non-null int64\n",
-      "Agency Subobject Name                127933 non-null object\n",
-      "Fund Type Name                       128327 non-null object\n",
-      "FY 2020 Working                      63847 non-null float64\n",
-      "FY 2021 Legislative Appropriation    64480 non-null float64\n",
-      "dtypes: float64(2), int64(4), object(12)\n",
-      "memory usage: 17.6+ MB\n",
-      "None\n",
-      "        Program Code    Object Code  Comptroller Subobject Code  \\\n",
-      "count  128327.000000  128327.000000               128327.000000   \n",
-      "mean        3.754214       4.867799                  521.602445   \n",
-      "std         4.855622       3.926681                  387.215349   \n",
-      "min         0.000000       1.000000                  101.000000   \n",
-      "25%         1.000000       1.000000                  161.000000   \n",
-      "50%         2.000000       3.000000                  397.000000   \n",
-      "75%         5.000000       8.000000                  872.000000   \n",
-      "max        66.000000      14.000000                 1499.000000   \n",
-      "\n",
-      "       Agency Subobject Code  FY 2020 Working  \\\n",
-      "count          128327.000000     6.384700e+04   \n",
-      "mean              754.965487     6.670765e+05   \n",
-      "std              1296.131712     1.952665e+07   \n",
-      "min               100.000000    -3.248250e+08   \n",
-      "25%               161.000000     5.985000e+02   \n",
-      "50%               401.000000     4.583000e+03   \n",
-      "75%               899.000000     3.519900e+04   \n",
-      "max              9998.000000     2.724551e+09   \n",
-      "\n",
-      "       FY 2021 Legislative Appropriation  \n",
-      "count                       6.448000e+04  \n",
-      "mean                        6.697404e+05  \n",
-      "std                         2.014785e+07  \n",
-      "min                        -2.948250e+08  \n",
-      "25%                         6.340000e+02  \n",
-      "50%                         4.668000e+03  \n",
-      "75%                         3.474575e+04  \n",
-      "max                         2.926462e+09  \n",
-      "\n",
-      "\tFY 2020 AND FY 2021 POST SESSION FOR OPEN DATA PORTAL - EXP HIGHER ED DATA.XLSX\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 14030 entries, 0 to 14029\n",
-      "Data columns (total 18 columns):\n",
-      "Fiscal Year                          14030 non-null object\n",
-      "Agency Code                          14030 non-null object\n",
-      "Agency Name                          14030 non-null object\n",
-      "Unit Code                            14030 non-null object\n",
-      "Unit Name                            14030 non-null object\n",
-      "Program Code                         14030 non-null int64\n",
-      "Program Name                         14030 non-null object\n",
-      "Subprogram Code                      14030 non-null int64\n",
-      "Subprogram Name                      14030 non-null object\n",
-      "Object Code                          14030 non-null int64\n",
-      "Object Name                          14030 non-null object\n",
-      "Comptroller Subobject Code           14030 non-null int64\n",
-      "Comptroller Subobject Name           14030 non-null object\n",
-      "Agency Subobject Code                14030 non-null int64\n",
-      "Agency Subobject Name                14030 non-null object\n",
-      "Fund Type Name                       14030 non-null object\n",
-      "FY 2020 Working                      7004 non-null float64\n",
-      "FY 2021 Legislative Appropriation    7026 non-null float64\n",
-      "dtypes: float64(2), int64(5), object(11)\n",
-      "memory usage: 1.9+ MB\n",
-      "None\n",
-      "       Program Code  Subprogram Code   Object Code  \\\n",
-      "count  14030.000000     14030.000000  14030.000000   \n",
-      "mean       4.491589         0.382609      6.117962   \n",
-      "std        2.558747        23.884297      4.112622   \n",
-      "min        1.000000         0.000000      1.000000   \n",
-      "25%        2.000000         0.000000      2.000000   \n",
-      "50%        4.000000         0.000000      8.000000   \n",
-      "75%        6.000000         0.000000      9.000000   \n",
-      "max       17.000000      2000.000000     14.000000   \n",
-      "\n",
-      "       Comptroller Subobject Code  Agency Subobject Code  FY 2020 Working  \\\n",
-      "count                14030.000000           14030.000000     7.004000e+03   \n",
-      "mean                   647.095296             647.095296     9.203354e+05   \n",
-      "std                    411.947340             411.947340     6.971136e+06   \n",
-      "min                    101.000000             101.000000    -1.514216e+07   \n",
-      "25%                    201.000000             201.000000     6.005250e+03   \n",
-      "50%                    802.000000             802.000000     3.951150e+04   \n",
-      "75%                    914.000000             914.000000     2.266948e+05   \n",
-      "max                   1499.000000            1499.000000     3.473096e+08   \n",
-      "\n",
-      "       FY 2021 Legislative Appropriation  \n",
-      "count                       7.026000e+03  \n",
-      "mean                        9.329631e+05  \n",
-      "std                         6.985092e+06  \n",
-      "min                        -1.514216e+07  \n",
-      "25%                         5.929750e+03  \n",
-      "50%                         3.864000e+04  \n",
-      "75%                         2.289380e+05  \n",
-      "max                         3.473096e+08  \n",
-      "\n",
-      "\tFY 2020 AND FY 2021 POST SESSION FOR OPEN DATA PORTAL - FTE DATA.XLSX\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 543 entries, 0 to 542\n",
-      "Data columns (total 5 columns):\n",
-      "Agency Code                          543 non-null object\n",
-      "Unit Code                            543 non-null object\n",
-      "Program Code                         543 non-null int64\n",
-      "FY 2020 Working                      535 non-null float64\n",
-      "FY 2021 Legislative Appropriation    540 non-null float64\n",
-      "dtypes: float64(2), int64(1), object(2)\n",
-      "memory usage: 21.3+ KB\n",
-      "None\n",
-      "       Program Code  FY 2020 Working  FY 2021 Legislative Appropriation\n",
-      "count    543.000000     5.350000e+02                         540.000000\n",
-      "mean       5.462247     1.643637e+02                         161.355833\n",
-      "std        7.957565     3.470562e+02                         344.721358\n",
-      "min        0.000000    -1.136868e-13                           0.000000\n",
-      "25%        1.000000     1.377500e+01                          13.750000\n",
-      "50%        3.000000     4.980000e+01                          46.000000\n",
-      "75%        6.000000     1.620500e+02                         159.540000\n",
-      "max       63.000000     3.488670e+03                        3488.670000\n",
-      "\n",
-      "\tFY 2020 AND FY 2021 POST SESSION FOR OPEN DATA PORTAL - FUNDS DATA.XLSX\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4522 entries, 0 to 4521\n",
-      "Data columns (total 12 columns):\n",
-      "Fiscal Year                          4522 non-null object\n",
-      "Agency Code                          4522 non-null object\n",
-      "Agency Name                          4522 non-null object\n",
-      "Unit Code                            4522 non-null object\n",
-      "Unit Name                            4522 non-null object\n",
-      "Program Code                         4522 non-null int64\n",
-      "Program Name                         4522 non-null object\n",
-      "Fund Type Name                       4522 non-null object\n",
-      "Fund Source Code                     4522 non-null object\n",
-      "Fund Source Name                     4522 non-null object\n",
-      "FY 2020 Working                      2305 non-null float64\n",
-      "FY 2021 Legislative Appropriation    2217 non-null float64\n",
-      "dtypes: float64(2), int64(1), object(9)\n",
-      "memory usage: 424.1+ KB\n",
-      "None\n",
-      "       Program Code  FY 2020 Working  FY 2021 Legislative Appropriation\n",
-      "count   4522.000000     2.305000e+03                       2.217000e+03\n",
-      "mean       4.786378     1.847758e+07                       1.947896e+07\n",
-      "std        7.019007     1.663701e+08                       1.735936e+08\n",
-      "min        0.000000    -9.372300e+04                      -1.390000e+02\n",
-      "25%        1.000000     6.653500e+04                       7.213200e+04\n",
-      "50%        3.000000     5.000000e+05                       5.665560e+05\n",
-      "75%        5.000000     3.341486e+06                       3.674000e+06\n",
-      "max       66.000000     5.782547e+09                       5.822448e+09\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_generator = gen_file(directory=data_files_folder)\n",
     "for file in file_generator:\n",
