docs: documenting notebook

--- a/Notebooks/MFR_Annotations_LinkChecker.ipynb
+++ b/Notebooks/MFR_Annotations_LinkChecker.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Annotations - Hyperlink Checker\n",
+    "## Iterate over links in the annotations file of focus, make requests to unique links, and inventory the response status codes. Use this process to discover bad links. Examples include MFR links that are not valid when the fiscal year portion of the link is updated from one year to the next"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,13 +21,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the annotation csv to inspect"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# annotation_csv = r\"..\\AnnotationData\\20210115_BUDGET_drill_down_annotations_operating_2022REVISED.csv\"\n",
-    "annotation_csv= r\"..\\AnnotationData\\20210115_CURCR_drill_down_annotations_operating_2022REVISED.csv\"\n",
+    "# annotation_csv= r\"..\\AnnotationData\\20210115_CURCR_drill_down_annotations_operating_2022REVISED.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tested_links_dict = {}"
    ]
   },
@@ -30,10 +53,19 @@
    "outputs": [],
    "source": [
     "def extract_links(text:str) -> list:\n",
+    "    \"\"\"\n",
+    "    Extract the href link from the annotation text and return a list of the isolated items\n",
+    "    \n",
+    "    \"\"\"\n",
     "    soup = BeautifulSoup(text, \"html.parser\")\n",
     "    return [link.get(\"href\") for link in soup.find_all(\"a\")]\n",
     "\n",
     "def test_link(link_list: list, tested_dict: dict=tested_links_dict):\n",
+    "    \"\"\"\n",
+    "    Determine if a link has been previously checked, if not then add to inventory and record request response status code\n",
+    "    There are a lot of repeat/identical links and it is a waste of time to recheck their status code. There is an inventory \n",
+    "    maintained to reduce rechecking. \n",
+    "    \"\"\"\n",
     "    already_handled = False\n",
     "\n",
     "    for link in link_list:\n",
@@ -247,11 +279,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Author: CJuice\n",
+    "Created: 20210119\n",
+    "Revisions:\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
