refactor: change file location

--- a/Notebooks/Initial Assessment of Data Files.ipynb
+++ b/Notebooks/Initial Assessment of Data Files.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_files_folder = r\"..\\20210111_Budget_Update\\OfficialData\"\n",
+    "data_files_folder = r\"..\\..\\20210111_Budget_Update_FIX\\OfficialData\"\n",
     "\n",
     "assert os.path.exists(data_files_folder)"
    ]
