feat: added pandas profiling

--- a/Notebooks/Initial Assessment of Data Files.ipynb
+++ b/Notebooks/Initial Assessment of Data Files.ipynb
@@ -15,10 +15,7 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.width', None)\n",
-    "pd.set_option('display.max_colwidth', None)"
+    "from pandas_profiling import ProfileReport"
    ]
   },
   {
@@ -27,8 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_files_folder = r\"..\\..\\20210111_Budget_Update_FIX\\OfficialData\"\n",
-    "\n",
+    "data_files_folder = r\"..\\..\\20210520_Update\\OfficialData\"\n",
     "assert os.path.exists(data_files_folder)"
    ]
   },
@@ -38,18 +34,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_file(directory):\n",
-    "    with os.scandir(data_files_folder) as entries:\n",
-    "        for entry in entries:\n",
-    "            if entry.is_file():\n",
-    "                yield entry"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Inspect each of the provided files for columns details"
+    "cat = \"category\"\n",
+    "dtypes = {\"Agency Code\": cat, \"Agency Name\": cat, \"Agency Subobject Code\": cat, \"Agency Subobject Name\": cat, \n",
+    "          \"Comptroller Subobject Code\": cat, \"Comptroller Subobject Name\": cat,\n",
+    "          \"Fiscal Year\": cat, \"Fund Source Code\": cat, \"Fund Source Name\": cat, \"Fund Type Name\": cat, \n",
+    "          \"Object Code\": cat, \"Object Name\": cat, \"Program Code\": cat, \"Program Name\": cat, \"Subprogram Code\": cat, \n",
+    "          \"Subprogram Name\": cat, \"Unit Code\": cat, \"Unit Name\": cat,}"
    ]
   },
   {
@@ -58,13 +48,220 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_generator = gen_file(directory=data_files_folder)\n",
-    "for file in file_generator:\n",
-    "    df = pd.read_excel(file)\n",
-    "    print(f\"\\t{os.path.basename(file).upper()}\")\n",
-    "    print(df.info())\n",
-    "    print(df.describe())\n",
-    "    print()"
+    "files_list = []\n",
+    "with os.scandir(data_files_folder) as entries:\n",
+    "    for entry in entries:\n",
+    "        if entry.is_file():\n",
+    "            files_list.append(entry)\n",
+    "len(files_list), files_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pandas Profiling of SME Provided Update Datasets\n",
+    "#### Depending on the number of files present in the update, choose which of the below to run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files_list[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_excel(files_list[0], dtype=dtypes)\n",
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile1 = ProfileReport(df1, minimal=True)\n",
+    "profile1.to_widgets()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files_list[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_excel(files_list[1], dtype=dtypes)\n",
+    "df2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile2 = ProfileReport(df2, minimal=True)\n",
+    "profile2.to_widgets()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files_list[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = pd.read_excel(files_list[2], dtype=dtypes)\n",
+    "df3.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile3 = ProfileReport(df3, minimal=True)\n",
+    "profile3.to_widgets()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files_list[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4 = pd.read_excel(files_list[3], dtype=dtypes)\n",
+    "df4.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile4 = ProfileReport(df4, minimal=True)\n",
+    "profile4.to_widgets()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4[df4[\"FY 2021 Working\"] == df4[\"FY 2021 Working\"].min()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OLD WAY: Inspect each of the provided files for columns details using .describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.set_option('display.max_rows', None)\n",
+    "# pd.set_option('display.max_columns', None)\n",
+    "# pd.set_option('display.width', None)\n",
+    "# pd.set_option('display.max_colwidth', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def gen_file(directory):\n",
+    "#     with os.scandir(data_files_folder) as entries:\n",
+    "#         for entry in entries:\n",
+    "#             if entry.is_file():\n",
+    "#                 yield entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# file_generator = gen_file(directory=data_files_folder)\n",
+    "# for file in file_generator:\n",
+    "#     df = pd.read_excel(file)\n",
+    "#     print(f\"\\t{os.path.basename(file).upper()}\")\n",
+    "#     print(df.info())\n",
+    "#     print(df.describe())\n",
+    "#     print()"
    ]
   },
   {
@@ -91,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
